// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordChange /> rendering should not show 'cancel' button if password is expired 1`] = `
<div
  className="container content"
  id="password-change"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <div
        className="inner"
      >
        <h1>
          PWD_CHANGE_TITL
        </h1>
        <p>
          PWD_CHANGE_HELP_TXT
        </p>
        <div
          className="row current-password"
        >
          <label
            htmlFor="current-password"
          >
            CURR_PWD_LBL
          </label>
          <input
            autoComplete="password"
            className="input"
            id="current-password"
            name="currentPassword"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="CURR_PWD_PHOLD"
            required={true}
            title="PWD_PTRN_DESC"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            hidePassword={true}
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
            secondInputRef={Object {}}
            toggler={[Function]}
          />
        </div>
        <div
          className="row new-password"
        >
          <label
            htmlFor="new-password"
          >
            PWD1_LBL
          </label>
          <input
            autoComplete="password"
            className="input"
            id="new-password"
            name="newPassword1"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="PWD1_PHOLD"
            required={true}
            title="PWD_PTRN_DESC"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            hidePassword={true}
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
            secondInputRef={
              Object {
                "current": null,
              }
            }
            toggler={[Function]}
          />
        </div>
        <div
          className="row password-confirm"
        >
          <label
            htmlFor="password-confirm"
          >
            CONFIRM_PWD_LBL
          </label>
          <input
            autoComplete="password"
            className="input"
            id="password-confirm"
            name="newPassword2"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="CONFIRM_PWD_PHOLD"
            required={true}
            title="PWD_PTRN_DESC"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            hidePassword={true}
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
            secondInputRef={
              Object {
                "current": null,
              }
            }
            toggler={[Function]}
          />
        </div>
        <div
          className="row submit"
        >
          <input
            className="button full"
            type="submit"
            value="PASSWORD_CHANGE"
          />
        </div>
      </div>
    </form>
    <Connect(Contact) />
  </div>
</div>
`;

exports[`<PasswordChange /> rendering should render correctly 1`] = `
<div
  className="container content"
  id="password-change"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <div
        className="inner"
      >
        <h1>
          PWD_CHANGE_TITL
        </h1>
        <p>
          PWD_CHANGE_HELP_TXT
        </p>
        <div
          className="row current-password"
        >
          <label
            htmlFor="current-password"
          >
            CURR_PWD_LBL
          </label>
          <input
            autoComplete="password"
            className="input"
            id="current-password"
            name="currentPassword"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="CURR_PWD_PHOLD"
            required={true}
            title="PWD_PTRN_DESC"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            hidePassword={true}
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
            secondInputRef={Object {}}
            toggler={[Function]}
          />
        </div>
        <div
          className="row new-password"
        >
          <label
            htmlFor="new-password"
          >
            PWD1_LBL
          </label>
          <input
            autoComplete="password"
            className="input"
            id="new-password"
            name="newPassword1"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="PWD1_PHOLD"
            required={true}
            title="PWD_PTRN_DESC"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            hidePassword={true}
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
            secondInputRef={
              Object {
                "current": null,
              }
            }
            toggler={[Function]}
          />
        </div>
        <div
          className="row password-confirm"
        >
          <label
            htmlFor="password-confirm"
          >
            CONFIRM_PWD_LBL
          </label>
          <input
            autoComplete="password"
            className="input"
            id="password-confirm"
            name="newPassword2"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="CONFIRM_PWD_PHOLD"
            required={true}
            title="PWD_PTRN_DESC"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            hidePassword={true}
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
            secondInputRef={
              Object {
                "current": null,
              }
            }
            toggler={[Function]}
          />
        </div>
        <div
          className="row submit"
        >
          <input
            className="button full"
            type="submit"
            value="PASSWORD_CHANGE"
          />
        </div>
        <div
          className="row cancel"
        >
          <Link
            className="button full"
            to="/default/status"
          >
            CANCEL
          </Link>
        </div>
      </div>
    </form>
    <Connect(Contact) />
  </div>
</div>
`;

exports[`<PasswordChange /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="container content"
  id="password-change"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <div
        className="inner"
      >
        <h1>
          PWD_CHANGE_TITL
        </h1>
        <p>
          PWD_CHANGE_HELP_TXT
        </p>
        <div
          className="row current-password"
        >
          <label
            htmlFor="current-password"
          >
            CURR_PWD_LBL
          </label>
          <input
            autoComplete="password"
            className="input"
            id="current-password"
            name="currentPassword"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="CURR_PWD_PHOLD"
            required={true}
            title="PWD_PTRN_DESC"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            hidePassword={true}
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
            secondInputRef={Object {}}
            toggler={[Function]}
          />
        </div>
        <div
          className="row new-password"
        >
          <label
            htmlFor="new-password"
          >
            PWD1_LBL
          </label>
          <input
            autoComplete="password"
            className="input"
            id="new-password"
            name="newPassword1"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="PWD1_PHOLD"
            required={true}
            title="PWD_PTRN_DESC"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            hidePassword={true}
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
            secondInputRef={
              Object {
                "current": null,
              }
            }
            toggler={[Function]}
          />
        </div>
        <div
          className="row password-confirm"
        >
          <label
            htmlFor="password-confirm"
          >
            CONFIRM_PWD_LBL
          </label>
          <input
            autoComplete="password"
            className="input"
            id="password-confirm"
            name="newPassword2"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="CONFIRM_PWD_PHOLD"
            required={true}
            title="PWD_PTRN_DESC"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            hidePassword={true}
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
            secondInputRef={
              Object {
                "current": null,
              }
            }
            toggler={[Function]}
          />
        </div>
        <div
          className="row submit"
        >
          <input
            className="button full"
            type="submit"
            value="PASSWORD_CHANGE"
          />
        </div>
        <div
          className="row cancel"
        >
          <Link
            className="button full"
            to="/default/status"
          >
            CANCEL
          </Link>
        </div>
      </div>
    </form>
    <Connect(Contact) />
  </div>
</div>
`;
